# bulk-merge

./: CONFIG_ROADMAP.md  Cargo.toml  README.md  ROADMAP.md
config/: bulk-merge.toml  libgen.toml  openlibrary.toml
docs/: cache.md  cli.md  config.md
docs/roadmaps/: CONFIG_ROADMAP.md  LIBGEN_INGESTION_ROADMAP.md  ROADMAP.md
docs/tranches/: 2026-04-13-roadmaps-feature-organization.md  2026-04-13-tranche-01-foundations.md  2026-04-13-tranche-02-code-layout.md  2026-04-14-tranche-03-libgen-schema-provisioning.md  2026-04-14-tranche-04-postgres-connection-parts.md  2026-04-14-tranche-05-libgen-row-ingest-resume.md  2026-04-14-tranche-06-import-file-indexes.md  2026-04-14-tranche-07-progress-logging.md  2026-04-14-tranche-08-libgen-raw-sample-validate.md  2026-04-14-tranche-09-libgen-stats-memory-bounds.md  2026-04-14-tranche-10-libgen-incremental-upsert.md  2026-04-14-tranche-11-dataset-state-deletes.md  2026-04-14-tranche-12-incremental-tests.md  2026-04-14-tranche-13-copy-loader.md  2026-04-14-tranche-14-row-hash-strategy.md  2026-04-14-tranche-15-timeouts-reporting.md  2026-04-14-tranche-16-libgen-offline-tsv-path.md  2026-04-14-tranche-17-cache-dir-defaults.md  2026-04-14-tranche-18-roadmap-resume-cache-policy.md  2026-04-14-tranche-19-roadmap-decomposition-cache-resume.md  (+16 more)
migrations/: 0001_init.sql  0002_libgen_raw.sql  0003_dataset_state_and_deletes.sql  0004_offline_swap_progress.sql  0005_consolidate_meta.sql
src/: cli.rs  config.rs  db.rs  lib.rs  logging.rs  main.rs  output.rs  progress.rs
tests/: libgen_incremental.rs  libgen_offline_load_resumable.rs
(+20 files in other folders)
